Fix company filter v1.0

--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -22,7 +22,7 @@
                   company :
                   <select class='select-option' [(ngModel)]='companySearch'>
                     <option value="">Filter by company</option>
-                    <option class='option' *ngFor='let option of companyList' [value]="option">{{option}}</option>
+                    <option class='option' *ngFor='let option of companyList' [value]="option.company">{{option.company}}</option>
                   </select>
                 </div>
                 <div class="col-sm-8">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
