--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -66,15 +66,15 @@
                           </ng-template>
                         </c-badge>
                       </angular2-multiselect>
-                      <!--<select class="form-control"
-                              id="agents"
-                              name="agentIds"
-                              [(ngModel)]="dep.agents"
-                              multiple>
-                          <option [value]="item.id" *ngFor="let item of (afterLoginState | async).agent.list; let i = index">
-                              {{item.first_name}} {{item.last_name}}
-                          </option>
-                      </select>-->
+                      <!--<select class="form-control"-->
+                              <!--id="agents"-->
+                              <!--name="agentIds"-->
+                              <!--[(ngModel)]="dep.agents"-->
+                              <!--multiple>-->
+                          <!--<option [value]="item.id" *ngFor="let item of (afterLoginState | async).agent.list; let i = index">-->
+                              <!--{{item.first_name}} {{item.last_name}}-->
+                          <!--</option>-->
+                      <!--</select>-->
                     </div>
                   </div>
                 </div>
