--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -18,11 +18,11 @@
                     <div class="box-body">
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                           <div class="row filter">
-                            <div class="col-sm-4">
+                            <div class="col-sm-4" *ngIf="!(authState | async).isAdmin;">
                               company :
                               <select class='select-option' [(ngModel)]='companySearch'>
                                 <option value="">Filter by company</option>
-                                <option class='option' *ngFor='let option of companyList' [value]="option">{{option}}</option>
+                                <option class='option' *ngFor='let option of companyList' [value]="option.company">{{option.company}}</option>
                               </select>
                             </div>
                             <div class="col-sm-8">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
